Use separate json bundle for test data