@@ -1,7 +1,6 @@
 package teammates.it.storage.sqlapi;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.UUID;
@@ -12,7 +11,6 @@ import org.testng.annotations.Test;
 
 import teammates.common.datatransfer.FeedbackParticipantType;
 import teammates.common.datatransfer.SqlDataBundle;
-import teammates.common.datatransfer.questions.FeedbackTextResponseDetails;
 import teammates.common.exception.EntityAlreadyExistsException;
 import teammates.common.exception.InvalidParametersException;
 import teammates.common.util.HibernateUtil;
@@ -24,7 +22,6 @@ import teammates.storage.sqlentity.FeedbackResponse;
 import teammates.storage.sqlentity.FeedbackResponseComment;
 import teammates.storage.sqlentity.FeedbackSession;
 import teammates.storage.sqlentity.Section;
-import teammates.storage.sqlentity.responses.FeedbackTextResponse;
 
 /**
  * SUT: {@link FeedbackResponseCommentsDb}.
@@ -33,36 +30,36 @@ public class FeedbackResponseCommentsDbIT extends BaseTestCaseWithSqlDatabaseAcc
 
     private final FeedbackResponseCommentsDb frcDb = FeedbackResponseCommentsDb.inst();
 
-    private SqlDataBundle typicalDataBundle;
+    private SqlDataBundle testDataBundle;
 
     @Override
     @BeforeClass
     public void setupClass() {
         super.setupClass();
-        typicalDataBundle = getTypicalSqlDataBundle();
+        testDataBundle = loadSqlDataBundle("/FeedbackResponsesITBundle.json");
     }
 
     @Override
     @BeforeMethod
     protected void setUp() throws Exception {
         super.setUp();
-        persistDataBundle(typicalDataBundle);
+        persistDataBundle(testDataBundle);
         HibernateUtil.flushSession();
     }
 
     @Test
     public void testGetFeedbackResponseCommentForResponseFromParticipant() {
         ______TS("success: typical case");
-        FeedbackResponse fr = typicalDataBundle.feedbackResponses.get("response1ForQ1");
+        FeedbackResponse fr = testDataBundle.feedbackResponses.get("response1ForQ1");
 
-        FeedbackResponseComment expectedComment = typicalDataBundle.feedbackResponseComments.get("comment1ToResponse1ForQ1");
+        FeedbackResponseComment expectedComment = testDataBundle.feedbackResponseComments.get("comment1ToResponse1ForQ1");
         FeedbackResponseComment actualComment = frcDb.getFeedbackResponseCommentForResponseFromParticipant(fr.getId());
 
         assertEquals(expectedComment, actualComment);
     }
 
     private FeedbackResponseComment prepareSqlInjectionTest() {
-        FeedbackResponseComment frc = typicalDataBundle.feedbackResponseComments.get("comment1ToResponse1ForQ1");
+        FeedbackResponseComment frc = testDataBundle.feedbackResponseComments.get("comment1ToResponse1ForQ1");
         assertNotNull(frcDb.getFeedbackResponseComment(frc.getId()));
 
         return frc;
@@ -96,8 +93,8 @@ public class FeedbackResponseCommentsDbIT extends BaseTestCaseWithSqlDatabaseAcc
     public void testSqlInjectionInCreateFeedbackResponseComment() throws Exception {
         FeedbackResponseComment frc = prepareSqlInjectionTest();
 
-        FeedbackResponse fr = typicalDataBundle.feedbackResponses.get("response1ForQ1");
-        Section s = typicalDataBundle.sections.get("section2InCourse1");
+        FeedbackResponse fr = testDataBundle.feedbackResponses.get("response1ForQ1");
+        Section s = testDataBundle.sections.get("section2InCourse1");
 
         String sqli = "'');/**/DELETE/**/FROM/**/feedback_response_comments;--@gmail.com";
         FeedbackResponseComment newFrc = new FeedbackResponseComment(
@@ -123,16 +120,17 @@ public class FeedbackResponseCommentsDbIT extends BaseTestCaseWithSqlDatabaseAcc
 
     @Test
     public void testGetFeedbackResponseCommentsForSession_matchFound_success() {
-        Course course = typicalDataBundle.courses.get("course1");
+        Course course = testDataBundle.courses.get("course1");
 
         ______TS("Session with comments");
-        FeedbackSession sessionWithComments = typicalDataBundle.feedbackSessions.get("session1InCourse1");
+        FeedbackSession sessionWithComments = testDataBundle.feedbackSessions.get("session1InCourse1");
         List<FeedbackResponseComment> expected = List.of(
-                typicalDataBundle.feedbackResponseComments.get("comment1ToResponse1ForQ1"),
-                typicalDataBundle.feedbackResponseComments.get("comment2ToResponse1ForQ1"),
-                typicalDataBundle.feedbackResponseComments.get("comment2ToResponse2ForQ1"),
-                typicalDataBundle.feedbackResponseComments.get("comment1ToResponse1ForQ2s"),
-                typicalDataBundle.feedbackResponseComments.get("comment1ToResponse1ForQ3")
+                testDataBundle.feedbackResponseComments.get("comment1ToResponse1ForQ1"),
+                testDataBundle.feedbackResponseComments.get("comment2ToResponse1ForQ1"),
+                testDataBundle.feedbackResponseComments.get("comment2ToResponse2ForQ1"),
+                testDataBundle.feedbackResponseComments.get("comment1ToResponse1ForQ2s"),
+                testDataBundle.feedbackResponseComments.get("comment1ToResponse1ForQ3"),
+                testDataBundle.feedbackResponseComments.get("comment1ToResponse4ForQ1")
         );
         List<FeedbackResponseComment> results = frcDb.getFeedbackResponseCommentsForSession(
                         course.getId(), sessionWithComments.getName());
@@ -141,8 +139,8 @@ public class FeedbackResponseCommentsDbIT extends BaseTestCaseWithSqlDatabaseAcc
 
     @Test
     public void testGetFeedbackResponseCommentsForSession_matchNotFound_shouldReturnEmptyList() {
-        Course course = typicalDataBundle.courses.get("course1");
-        FeedbackSession session = typicalDataBundle.feedbackSessions.get("session1InCourse1");
+        Course course = testDataBundle.courses.get("course1");
+        FeedbackSession session = testDataBundle.feedbackSessions.get("session1InCourse1");
 
         ______TS("Course not found");
         List<FeedbackResponseComment> results = frcDb.getFeedbackResponseCommentsForSession("not_exist", session.getName());
@@ -153,7 +151,7 @@ public class FeedbackResponseCommentsDbIT extends BaseTestCaseWithSqlDatabaseAcc
         assertEquals(0, results.size());
 
         ______TS("Session without comments");
-        FeedbackSession sessionWithoutComments = typicalDataBundle.feedbackSessions.get("session2InTypicalCourse");
+        FeedbackSession sessionWithoutComments = testDataBundle.feedbackSessions.get("ongoingSession1InCourse1");
         results = frcDb.getFeedbackResponseCommentsForSession(course.getId(), sessionWithoutComments.getName());
         assertEquals(0, results.size());
     }
@@ -161,11 +159,13 @@ public class FeedbackResponseCommentsDbIT extends BaseTestCaseWithSqlDatabaseAcc
     @Test
     public void testGetFeedbackResponseCommentsForQuestion_matchFound_success() {
         ______TS("Question with comments");
-        FeedbackQuestion questionWithComments = typicalDataBundle.feedbackQuestions.get("qn1InSession1InCourse1");
-        List<FeedbackResponseComment> expectedComments = Arrays.asList(
-                typicalDataBundle.feedbackResponseComments.get("comment1ToResponse1ForQ1"),
-                typicalDataBundle.feedbackResponseComments.get("comment2ToResponse1ForQ1"),
-                typicalDataBundle.feedbackResponseComments.get("comment2ToResponse2ForQ1"));
+        FeedbackQuestion questionWithComments = testDataBundle.feedbackQuestions.get("qn1InSession1InCourse1");
+        List<FeedbackResponseComment> expectedComments = List.of(
+                testDataBundle.feedbackResponseComments.get("comment1ToResponse1ForQ1"),
+                testDataBundle.feedbackResponseComments.get("comment2ToResponse1ForQ1"),
+                testDataBundle.feedbackResponseComments.get("comment2ToResponse2ForQ1"),
+                testDataBundle.feedbackResponseComments.get("comment1ToResponse4ForQ1")
+        );
         List<FeedbackResponseComment> results = frcDb.getFeedbackResponseCommentsForQuestion(questionWithComments.getId());
         assertListCommentsEqual(expectedComments, results);
     }
@@ -178,7 +178,7 @@ public class FeedbackResponseCommentsDbIT extends BaseTestCaseWithSqlDatabaseAcc
         assertEquals(0, results.size());
 
         ______TS("Question without comments");
-        FeedbackQuestion questionWithoutComments = typicalDataBundle.feedbackQuestions.get("qn5InSession1InCourse1");
+        FeedbackQuestion questionWithoutComments = testDataBundle.feedbackQuestions.get("qn5InSession1InCourse1");
         results = frcDb.getFeedbackResponseCommentsForQuestion(questionWithoutComments.getId());
         assertEquals(0, results.size());
     }
@@ -186,48 +186,45 @@ public class FeedbackResponseCommentsDbIT extends BaseTestCaseWithSqlDatabaseAcc
     @Test
     public void testGetFeedbackResponseCommentsForSessionInSection_matchFound_success()
             throws EntityAlreadyExistsException, InvalidParametersException {
-        SqlDataBundle additionalTestData = getAdditionalTestData();
-        Section section1 = additionalTestData.sections.get("section1aInCourse1");
-        Section section2 = additionalTestData.sections.get("section2aInCourse1");
-        Course course = additionalTestData.courses.get("course1");
-        FeedbackSession session = additionalTestData.feedbackSessions.get("session1InCourse1");
+        Section section1 = testDataBundle.sections.get("section1InCourse1");
+        Section section2 = testDataBundle.sections.get("section2InCourse1");
+        Course course = testDataBundle.courses.get("course1");
+        FeedbackSession session1 = testDataBundle.feedbackSessions.get("session1InCourse1");
+        FeedbackSession session2 = testDataBundle.feedbackSessions.get("session2InTypicalCourse");
 
-        ______TS("Section 1A match");
+        ______TS("Section 1 Session 2 match");
         List<FeedbackResponseComment> expected = List.of(
-                additionalTestData.feedbackResponseComments.get("commentForQ1FromS1aToS1a"),
-                additionalTestData.feedbackResponseComments.get("commentForQ1FromS1aToS2a"),
-                additionalTestData.feedbackResponseComments.get("commentForQ2FromS1aToS2a")
+                testDataBundle.feedbackResponseComments.get("comment1ToResponse1ForQ1InSession2")
         );
         List<FeedbackResponseComment> results = frcDb.getFeedbackResponseCommentsForSessionInSection(
-                course.getId(), session.getName(), section1.getName());
+                course.getId(), session2.getName(), section1.getName());
         assertListCommentsEqual(expected, results);
 
-        ______TS("Section 2A match");
+        ______TS("Section 2 Session 1 match");
         expected = List.of(
-                additionalTestData.feedbackResponseComments.get("commentForQ1FromS1aToS2a"),
-                additionalTestData.feedbackResponseComments.get("commentForQ1FromS2aToS2a"),
-                additionalTestData.feedbackResponseComments.get("commentForQ2FromS1aToS2a")
+                testDataBundle.feedbackResponseComments.get("comment1ToResponse4ForQ1")
         );
         results = frcDb.getFeedbackResponseCommentsForSessionInSection(
-                course.getId(), session.getName(), section2.getName());
+                course.getId(), session1.getName(), section2.getName());
         assertListCommentsEqual(expected, results);
     }
 
     @Test
     public void testGetFeedbackResponseCommentsForSessionInSection_matchNotFound_shouldReturnEmptyList() {
-        Course course = typicalDataBundle.courses.get("course1");
-        FeedbackSession session1 = typicalDataBundle.feedbackSessions.get("session1InCourse1");
-        FeedbackSession session2 = typicalDataBundle.feedbackSessions.get("session2InTypicalCourse");
-        Section section = typicalDataBundle.sections.get("section1InCourse1");
+        Course course = testDataBundle.courses.get("course1");
+        FeedbackSession session1 = testDataBundle.feedbackSessions.get("session1InCourse1");
+        FeedbackSession session2 = testDataBundle.feedbackSessions.get("session2InTypicalCourse");
+        Section section1 = testDataBundle.sections.get("section1InCourse1");
+        Section section2 = testDataBundle.sections.get("section2InCourse1");
 
         ______TS("Course not found");
         List<FeedbackResponseComment> results = frcDb.getFeedbackResponseCommentsForSessionInSection(
-                "not_exist", session1.getName(), section.getName());
+                "not_exist", session1.getName(), section1.getName());
         assertEquals(0, results.size());
 
         ______TS("Session not found");
         results = frcDb.getFeedbackResponseCommentsForSessionInSection(
-                course.getId(), "Nonexistent session", section.getName());
+                course.getId(), "Nonexistent session", section1.getName());
         assertEquals(0, results.size());
 
         ______TS("Section not found");
@@ -237,31 +234,31 @@ public class FeedbackResponseCommentsDbIT extends BaseTestCaseWithSqlDatabaseAcc
 
         ______TS("No matching comments exist");
         results = frcDb.getFeedbackResponseCommentsForSessionInSection(
-                course.getId(), session2.getName(), section.getName());
+                course.getId(), session2.getName(), section2.getName());
         assertEquals(0, results.size());
     }
 
     @Test
     public void testGetFeedbackResponseCommentsForQuestionInSection_matchFound_success() {
-        SqlDataBundle additionalTestData = getAdditionalTestData();
-        Section section1 = additionalTestData.sections.get("section1aInCourse1");
-        Section section2 = additionalTestData.sections.get("section2aInCourse1");
-        FeedbackQuestion question1 = typicalDataBundle.feedbackQuestions.get("qn1InSession1InCourse1");
-        FeedbackQuestion question2 = typicalDataBundle.feedbackQuestions.get("qn2InSession1InCourse1");
+        Section section1 = testDataBundle.sections.get("section1InCourse1");
+        Section section2 = testDataBundle.sections.get("section2InCourse1");
+        FeedbackQuestion question1 = testDataBundle.feedbackQuestions.get("qn1InSession1InCourse1");
+        FeedbackQuestion question2 = testDataBundle.feedbackQuestions.get("qn2InSession1InCourse1");
 
-        ______TS("Section 1A Question 1 match");
+        ______TS("Section 1 Question 1 match");
         List<FeedbackResponseComment> expected = List.of(
-                additionalTestData.feedbackResponseComments.get("commentForQ1FromS1aToS1a"),
-                additionalTestData.feedbackResponseComments.get("commentForQ1FromS1aToS2a")
+                testDataBundle.feedbackResponseComments.get("comment1ToResponse1ForQ1"),
+                testDataBundle.feedbackResponseComments.get("comment2ToResponse1ForQ1"),
+                testDataBundle.feedbackResponseComments.get("comment2ToResponse2ForQ1"),
+                testDataBundle.feedbackResponseComments.get("comment1ToResponse4ForQ1")
         );
         List<FeedbackResponseComment> results = frcDb.getFeedbackResponseCommentsForQuestionInSection(
                 question1.getId(), section1.getName());
         assertListCommentsEqual(expected, results);
 
-        ______TS("Section 2A Question 1 match");
+        ______TS("Section 2 Question 1 match");
         expected = List.of(
-                additionalTestData.feedbackResponseComments.get("commentForQ1FromS1aToS2a"),
-                additionalTestData.feedbackResponseComments.get("commentForQ1FromS2aToS2a")
+                testDataBundle.feedbackResponseComments.get("comment1ToResponse4ForQ1")
         );
         results = frcDb.getFeedbackResponseCommentsForQuestionInSection(
                 question1.getId(), section2.getName());
@@ -269,7 +266,7 @@ public class FeedbackResponseCommentsDbIT extends BaseTestCaseWithSqlDatabaseAcc
 
         ______TS("Section 1 Question 2 match");
         expected = List.of(
-                additionalTestData.feedbackResponseComments.get("commentForQ2FromS1aToS2a")
+                testDataBundle.feedbackResponseComments.get("comment1ToResponse1ForQ2s")
         );
         results = frcDb.getFeedbackResponseCommentsForQuestionInSection(
                 question2.getId(), section1.getName());
@@ -278,9 +275,9 @@ public class FeedbackResponseCommentsDbIT extends BaseTestCaseWithSqlDatabaseAcc
 
     @Test
     public void testGetFeedbackResponseCommentsForQuestionInSection_matchNotFound_shouldReturnEmptyList() {
-        Section section = typicalDataBundle.sections.get("section1InCourse1");
-        FeedbackQuestion question1 = typicalDataBundle.feedbackQuestions.get("qn1InSession1InCourse1");
-        FeedbackQuestion question2 = typicalDataBundle.feedbackQuestions.get("qn1InSession2InCourse1");
+        Section section = testDataBundle.sections.get("section1InCourse1");
+        FeedbackQuestion question1 = testDataBundle.feedbackQuestions.get("qn1InSession1InCourse1");
+        FeedbackQuestion question2 = testDataBundle.feedbackQuestions.get("qn4InSession1InCourse1");
 
         ______TS("Question not found");
         UUID nonexistentQuestionId = UUID.fromString("11110000-0000-0000-0000-000000000000");
@@ -305,71 +302,4 @@ public class FeedbackResponseCommentsDbIT extends BaseTestCaseWithSqlDatabaseAcc
         assertEquals("List size not equal.", expected.size(), actual.size());
     }
 
-    /**
-     * Generate extra test comments not included in typical bundle.
-     */
-    private SqlDataBundle getAdditionalTestData() {
-        SqlDataBundle bundle = new SqlDataBundle();
-
-        Course course = typicalDataBundle.courses.get("course1");
-        FeedbackQuestion question1 = typicalDataBundle.feedbackQuestions.get("qn1InSession1InCourse1");
-        FeedbackQuestion question2 = typicalDataBundle.feedbackQuestions.get("qn2InSession1InCourse1");
-        FeedbackSession session = typicalDataBundle.feedbackSessions.get("session1InCourse1");
-        Section section1a = new Section(course, "Section 1A");
-        Section section2a = new Section(course, "Section 2A");
-        FeedbackResponse frG1R1Q1 = new FeedbackTextResponse(question1, "", section1a, "", section1a,
-                new FeedbackTextResponseDetails("Response Q1 S1 to S1"));
-        FeedbackResponse frG1R2Q1 = new FeedbackTextResponse(question1, "", section1a, "", section2a,
-                new FeedbackTextResponseDetails("Response Q1 S1 to S2"));
-        FeedbackResponse frG1R2Q2 = new FeedbackTextResponse(question2, "", section1a, "", section2a,
-                        new FeedbackTextResponseDetails("Response Q2 S1 to S2"));
-        FeedbackResponse frG2R2Q1 = new FeedbackTextResponse(question1, "", section2a, "", section2a,
-                new FeedbackTextResponseDetails("Response Q1 S2 to S2"));
-        FeedbackResponseComment frcG1R1Q1 = new FeedbackResponseComment(
-                frG1R1Q1, "", FeedbackParticipantType.STUDENTS, section1a, section1a,
-                "Comment Q1 S1 to S1", true, true, new ArrayList<>(), new ArrayList<>(), ""
-        );
-        FeedbackResponseComment frcG1R2Q1 = new FeedbackResponseComment(
-                frG1R2Q1, "", FeedbackParticipantType.STUDENTS, section1a, section2a,
-                "Comment Q1 S1 to S2", true, true, new ArrayList<>(), new ArrayList<>(), ""
-        );
-        FeedbackResponseComment frcG1R2Q2 = new FeedbackResponseComment(
-                frG1R2Q2, "", FeedbackParticipantType.STUDENTS, section1a, section2a,
-                "Comment Q2 S1 to S2", true, true, new ArrayList<>(), new ArrayList<>(), ""
-        );
-        FeedbackResponseComment frcG2R2Q1 = new FeedbackResponseComment(
-                frG2R2Q1, "", FeedbackParticipantType.STUDENTS, section2a, section2a,
-                "Comment Q1 S2 to S2", true, true, new ArrayList<>(), new ArrayList<>(), ""
-        );
-
-        HibernateUtil.persist(section1a);
-        HibernateUtil.persist(section2a);
-        course.addSection(section1a);
-        course.addSection(section2a);
-        HibernateUtil.merge(session);
-        HibernateUtil.merge(course);
-        HibernateUtil.persist(frG1R1Q1);
-        HibernateUtil.persist(frG1R2Q2);
-        HibernateUtil.persist(frG1R2Q1);
-        HibernateUtil.persist(frG2R2Q1);
-        HibernateUtil.persist(frcG1R1Q1);
-        HibernateUtil.persist(frcG1R2Q2);
-        HibernateUtil.persist(frcG1R2Q1);
-        HibernateUtil.persist(frcG2R2Q1);
-
-        bundle.courses.put("course1", course);
-        bundle.feedbackSessions.put("session1InCourse1", session);
-        bundle.sections.put("section1aInCourse1", section1a);
-        bundle.sections.put("section2aInCourse1", section2a);
-        bundle.feedbackResponses.put("responseForQ1FromS1aToS1a", frG1R1Q1);
-        bundle.feedbackResponses.put("responseForQ1FromS1aToS2a", frG1R2Q1);
-        bundle.feedbackResponses.put("responseForQ2FromS1aToS2a", frG1R2Q2);
-        bundle.feedbackResponses.put("responseForQ1FromS2aToS2a", frG2R2Q1);
-        bundle.feedbackResponseComments.put("commentForQ1FromS1aToS1a", frcG1R1Q1);
-        bundle.feedbackResponseComments.put("commentForQ1FromS1aToS2a", frcG1R2Q1);
-        bundle.feedbackResponseComments.put("commentForQ2FromS1aToS2a", frcG1R2Q2);
-        bundle.feedbackResponseComments.put("commentForQ1FromS2aToS2a", frcG2R2Q1);
-
-        return bundle;
-    }
 }
